Testing different looks: original version

--- a/testVideoPlayer.html
+++ b/testVideoPlayer.html
@@ -43,7 +43,8 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
             <div id="progressbar">
               <div id = "progressbarVal"></div>
             </div>
-            <div id = "tickBar"></div>
+            <div id = "tickBar"><div id = "dragBar" style = "position: absolute; background-color: blue; opacity: 0.2"></div></div>
+
           </div>
           <div id = "videoTimeDisplay">Time: <span id = "minutes">00</span>:<span id = "seconds">00</span></div>
         </div>
